--- a/0.22.1/centos/7/Dockerfile
+++ b/0.22.1/centos/7/Dockerfile
@@ -1,10 +1,7 @@
 FROM centos:7
 
 RUN rpm -i http://repos.mesosphere.io/el/7/noarch/RPMS/mesosphere-el-repo-7-1.noarch.rpm && \
-yum -y install mesos-0.22.1
-
-# http://docs.docker.com/installation/centos/
-RUN curl -fLsS https://get.docker.com/ | sh
+yum -y install mesos-0.22.1 docker
 
 CMD ["/usr/sbin/mesos-slave"]
 
